--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Coba Git Remote</title>
 </head>
 <body>
-    
+    <h1>Hello World</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus deleniti maiores ab natus at, recusandae magnam doloremque nulla mollitia, provident vero?</p>
 </body>
 </html>
